--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Endpoints": {
+    "UrlBase": "http://masglobaltestapi.azurewebsites.net/api/",
+    "Employees": "Employees/"
+  },
   "AllowedHosts": "*"
 }
