--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "Endpoints": {
-    "UrlBase": "http://masglobaltestapi.azurewebsites.net/api/",
+    "UrlBase": "https://masglobaltestapi.azurewebsites.net/api/",
     "Employees": "Employees/"
   },
   "AllowedHosts": "*"
